--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -2,6 +2,7 @@
   "header": {
     "blocks": ["header-layout.desktop", "header-layout.mobile"]
   },
+  
   "header.full": {
     "blocks": ["header-layout.desktop", "header-layout.mobile"]
   },
@@ -27,8 +28,8 @@
       "fullWidth": true
     },
     "children": [
-      "flex-layout.col#logo-desktop",      
-      "search-bar",   
+      "flex-layout.col#logo-desktop",
+      "search-bar",
       "minicart.v2"
     ]
   },
@@ -56,7 +57,7 @@
   "flex-layout.row#mobile": {
     "children": [
       "drawer",
-      "logo",      
+      "logo",
       "login",
       "minicart.v2"
     ],
@@ -73,8 +74,7 @@
 
   "vtex.menu@2.x:menu#websites": {
     "props": {
-      "items": [        
-        {
+      "items": [{
           "id": "menu-item-shop",
           "type": "custom",
           "iconId": null,
@@ -95,7 +95,7 @@
           "itemProps": {
             "type": "internal",
             "href": "#",
-            "noFollow": false,            
+            "noFollow": false,
             "text": "CORINTHIANS"
           }
         },
@@ -180,6 +180,10 @@
     }
   }
 }
+
+
+
+
 
 
 
