--- a/store/blocks/product-list.jsonc
+++ b/store/blocks/product-list.jsonc
@@ -2,13 +2,15 @@
     "product-summary.shelf#demo1": {
         "children": [
             "product-summary-image",
+            "product-summary-name",
+            "product-summary-description",
             "product-rating-inline",
             "product-summary-space",
-            "product-summary-name",
             "product-summary-price",
             "product-summary-buy-button"
         ]
     },
+
     "list-context.product-list#demo1": {
         "props": {
             "category": "20"
@@ -20,7 +22,7 @@
         "props": {
             "itemsPerPage": {
                 "desktop": 2,
-                "tablet": 1,
+                "tablet": 2,
                 "phone": 1
             },
             "infinite": true,
