--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -1,6 +1,9 @@
 {
   "header": {
-    "blocks": ["header-layout.desktop", "header-layout.mobile"]
+    "blocks": ["header-layout.desktop", "header-layout.mobile"],
+    "props": {
+      "blockClass": "classheader"
+    }
   },
   
   "header.full": {
