--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -1,26 +1,63 @@
 {
   "footer": {
-    "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
+    "blocks": ["footer-layout.desktop", "footer-layout.mobile"],
+    "props": {
+      "blockClass": "classfooter"
+    }
   },
   "footer-layout.desktop": {
     "children": [
-      "flex-layout.row#footer"
-    ]
+      "sticky-layout#footer-desktop"
+    ],
+    "props": {
+      "fullWidth": true
+    }
   },
   "footer-layout.mobile": {
     "children": [
-      "flex-layout.row#footer"
+      "flex-layout.row#footer-mobile"
     ]
   },
-  "flex-layout.row#footer": {
-    "children": [
-      "image"
-    ]
+  "sticky-layout#footer-desktop": {
+    "props": {
+      "blockClass": "sticky-header",
+      "position": "bottom",
+      "verticalSpacing": 0
+    },
+    "children": ["flex-layout.row#footer-desktop"]
+  },
+  "flex-layout.row#footer-desktop": {
+    "children": [      
+      "rich-text#copyright"
+    ],
+    "props": {
+      "horizontalAlign": "center",
+      "verticalAlign": "center",
+      "preventHorizontalStretch": true,
+      "preventVerticalStretch": true,
+      "fullWidth": true
+    }
   },
   "image": {
     "props": {
       "width": 100,
-      "src": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg"
+      "src": "https://cdn.statically.io/gh/devlobao84/img-for-cdn/main/upmedal.png"
+    }
+  },
+
+  "flex-layout.row#footer-mobile": {
+    "children": [
+      "social-networks"
+    ]
+  },
+ 
+  "rich-text#copyright": {
+    "props": {
+      "text": "© Copyright | Todos os direitos reservados - Lobão",
+      "textAlignment": "CENTER",
+      "textPosition": "CENTER",
+      "font": "t-heading-6"
     }
   }
+
 }
