--- a/store/blocks/product-list.jsonc
+++ b/store/blocks/product-list.jsonc
@@ -6,7 +6,7 @@
             "product-summary-description",
             "product-rating-inline",
             "product-summary-space",
-            "product-summary-price",
+            "product-summary-space",            
             "product-summary-buy-button"
         ]
     },
