--- a/store/blocks/product-list.jsonc
+++ b/store/blocks/product-list.jsonc
@@ -4,6 +4,7 @@
             "product-summary-image",
             "product-summary-name",
             "product-summary-description",
+            "product-summary-price",
             "product-rating-inline",
             "product-summary-space",
             "product-summary-space",            
